fix pager mis-alignment

--- a/root/static/style/scss/_components.scss
+++ b/root/static/style/scss/_components.scss
@@ -69,18 +69,20 @@
 
 @mixin button-group($hue: 200, $sat: 30%, $l: 80%, $invert: 0) {
 	list-style-type: none;
-	padding: 0;
+	padding: 1px 0 0 0;
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
 
 	li {
-		display: inline-block;
-
-		&:not(:last-child) {
-			margin-right: -1px;
-			margin-bottom: -1px;
-		}
+		margin-top: -1px;
+		margin-right: -1px;
 
 		a {
 			@include button($hue, $sat, $l, $invert);
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	}
 }
