--- a/root/static/style/scss/_helpers.scss
+++ b/root/static/style/scss/_helpers.scss
@@ -166,3 +166,11 @@
 	display: flex;
 	flex-direction: row;
 }
+
+.center {
+	justify-content: center;
+}
+
+.end {
+	justify-content: end;
+}
